RESOLVED FIXED282372
bestbuy.com: [iPad] Cannot adjust page zoom on Bestbuy.com
https://bugs.webkit.org/show_bug.cgi?id=282372
Summary bestbuy.com: [iPad] Cannot adjust page zoom on Bestbuy.com
Lily Spiniolas
Reported 2024-10-30 21:24:51 PDT
Cannot adjust page zoom on Bestbuy.com due to an issue where explicit viewport widths such as 'width=1024' set in the meta tag cause page zoom to stop working.
Attachments
Lily Spiniolas
Comment 1 2024-10-30 21:25:11 PDT
Lily Spiniolas
Comment 2 2024-10-30 21:27:16 PDT
EWS
Comment 3 2024-11-01 18:04:29 PDT
Committed 286043@main (965304e0df2a): <https://commits.webkit.org/286043@main> Reviewed commits have been landed. Closing PR #35984 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.