bestbuy.com: [iPad] Cannot adjust page zoom on Bestbuy.com https://bugs.webkit.org/show_bug.cgi?id=282372 rdar://100570236

Reviewed by Wenson Hsieh.

ViewportConfiguration::updateConfiguration now checks for the case where both the
layout size is scaled and an explicit width has been set by the meta viewport. When
both are true, the configuration width is scaled accordingly.

* LayoutTests/fast/viewport/ios/constant-width-viewport-with-no-scale-after-changing-view-scale-expected.txt: Added.
* LayoutTests/fast/viewport/ios/constant-width-viewport-with-no-scale-after-changing-view-scale.html: Added.
* Source/WebCore/page/ViewportConfiguration.cpp:
(WebCore::ViewportConfiguration::updateConfiguration):

Canonical link: https://commits.webkit.org/286043@main